---------------------------------------------------------------------------------------------------
Version: 0.7.0
Date: 2025-11-19
  Changes:
    - Reworked intruder remains to contain a variety of ammo, but no longer advanced circuits
    - Added residue skimming recipe that provides an infinite source of advanced circuits, and a bunch of trash
    - Document forging 1 is now a trigger technology and unlocks after mining 200 vault access keys
    - Added recipe to turn Haronite into calcite and stone
    - Calcite is no longer extracted from vaults
    - Protein shake now requires a plastic bottle to craft, and that bottle will remain as trash when used as fuel source
    - Turbofish now spoils into spoilage instead of protein powder
  Balancing:
    - Adjusted vault access key recipe to make it craftable early
    - Beta carotene recipe no longer produces stone as byproduct
    - Beta carotene now requires Harene gas instead of Energetic residue
    - Reduced yummy value of protein shake
    - Rabbascan rock no longer contains copper ore
    - Nerfed low-alert defender bots
    - [APS only] Adjusted starting inventory. now contains a power pole to allow immediate electricity graph access
    - [APS only] Electric mining drill is now an essential technology
---------------------------------------------------------------------------------------------------
Version: 0.6.5
Date: 2025-11-20
  Changes:
    - Added RU locale (thanks Efremiros)
  Bugfixes:
    - Fixed collision issue introduced with last bugfix
---------------------------------------------------------------------------------------------------
Version: 0.6.4
Date: 2025-11-20
  Bugfixes:
    - Fixed robots not getting damaged by bullets using collision checks
---------------------------------------------------------------------------------------------------
Version: 0.6.3
Date: 2025-11-18
  Bugfixes:
    - Fixed technology having wrong icon size could cause errors