@@ -1,0 +1,8 @@
+{
+    "recipe":[
+        ["vault-protocol-catalysts", "vault-protocol-sulfur"]
+    ],
+    "tile":[
+        ["rabbasca-harene", "rabbasca-harenic-sludge"]
+    ]
+}
